--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.sjostrom.webresources">
+    package="io.sjostrom.sitesource">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="io.sjostrom.sitesource.ResourcesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="io.sjostrom.sitesource.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
